--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,3 +23,4 @@ steps:
   - 'TEXLIVE_IMAGE=gcr.io/overleaf-ops/texlive-full:2018.1.002'
 images:
   - 'gcr.io/$PROJECT_ID/clsi:${BRANCH_NAME}-${SHORT_SHA}'
+timeout: 1800s
