Try build on bigger machine

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,3 +24,6 @@ steps:
 images:
   - 'gcr.io/$PROJECT_ID/clsi:${BRANCH_NAME}-${SHORT_SHA}'
 timeout: 1800s
+options:
+  diskSizeGb: 200
+  machineType: 'N1_HIGHCPU_8'
